--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "next": "14.0.4",
     "prettier": "^3.2.3",
     "react": "^18",
+    "react-countdown": "^2.3.5",
     "react-dom": "^18",
     "react-icons": "^5.0.1",
     "react-toastify": "^10.0.3",
